[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"


[project]
name = "doobs_score_matching"
version = "0.0.1"
authors = [
  { name="Elizabeth Baker", email="elba@di.ku.dk" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jax[cpu]",
    "diffrax",
    "matplotlib",
    "flax",
    "orbax",
]


[project.optional-dependencies]
examples = [
    "jupyter"]

test =[
    "pytest",
]
lint =[
    "pre-commit",
]
format =[
    "isort",
    "black",
]
full = ["doobs_score_matching[examples]", "doobs_score_matching[test]", "doobs_score_matching[lint]", "doobs_score_matching[format]"]


[project.urls]
"Homepage" = "https://github.com/libbylbaker/score_matching_doob.git"


[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "99"

[tool.black]
line-length = "99"
