[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "forwardbridge"
version = "0.0.1"

readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jax[cpu]",
    "flax",
    "orbax",
    "optax",
]

[project.optional-dependencies]
examples = [
    "jupyter",
    "tueplots",
    "matplotlib",]

test =[
    "pytest",
]
lint =[
    "pre-commit",
]
format =[
    "isort",
    "black",
]
full = ["forwardbridge[examples]", "forwardbridge[test]", "forwardbridge[lint]", "forwardbridge[format]"]


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["forwardbridge*"]  # package names should match these glob patterns (["*"] by default)


[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "120"

[tool.black]
line-length = "120"
